--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>DATA</title>
 </head>
 
 <script src="main.js"></script>
@@ -22,7 +22,7 @@
         <p>https://drive.google.com/file/d/1FMyLgfr0RvqY5b-1vHcAXfPEga4NS05Y/view?usp=sharing</p>
         <h4>* WanDrv Win 7 64</h4>
         <p>https://drive.google.com/file/d/1bNALWY3HqWaREoe7sntUDEAN1D56u2ce/view?usp=sharing</p>
-        [Github](https://github.com)
+        
 
         </body>
 </body>
