--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
         <h4>* WanDrv Win 7 64</h4>
         <p>https://drive.google.com/file/d/1bNALWY3HqWaREoe7sntUDEAN1D56u2ce/view?usp=sharing</p>
 	    
-        <button name="button" value="OK" type="button" onclick="hello()">Click Here</button>  
-<script>  
-  function hello(){  
-    alert("hello html button");  
-  }  
-</script>
+        <form action="https://drive.google.com/file/d/1Fik0V14KchDh8YzGKmKG5euYZYFetEZv/view?usp=sharing">
+    <input type="submit" value="Activate Windows Office" />
+</form>
 
         </body>
 </body>
