--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ article {
     <form action="https://drive.google.com/file/d/1bNALWY3HqWaREoe7sntUDEAN1D56u2ce/view?usp=sharing">
 <input type="submit" value="WanDrv Win 7 64" />
 </form>
-<h3> ...............................</h3>
+<marquee direction="up"> <h3> ......................................................................................................................................................................................................................................................................................................................................................................................................</h3></marquee>
+
 </article>
  
 <footer>Copyright &copy; Dam Mai Duong</footer>
