--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ article {
    
 <nav>
   <ul>
-    <h1><a href="https:facebook.com/c0iii">Trang chủ</a></h1>
+    <h1><a href="https://www.facebook.com/c0iii/">Trang chủ</a></h1>
   
     
     
-    <form action="https:facebook.com/c0iii">
+    <form action="https://www.facebook.com/c0iii/">
     <h1><input type="submit" value="Facebook" /></h1>
     </form>
 
