--- a/index.html
+++ b/index.html
@@ -113,7 +113,13 @@ article {
     <form action="https://drive.google.com/file/d/1bNALWY3HqWaREoe7sntUDEAN1D56u2ce/view?usp=sharing">
 <input type="submit" value="WanDrv Win 7 64" />
 </form>
-
+<h4>* Adobe Photoshop CS6</h4>
+<form action="https://drive.google.com/file/d/1mVUeHRm4IiKobGL2FDUmPfmPIIf9O9GF/view?usp=sharing">
+<input type="submit" value="Adobe Photoshop CS6" />
+</form>
+<h4>* Autocad 2007</h4>
+<form action="https://drive.google.com/file/d/182yVXx-4Fcih8ZRE7pOEaLwD2n7fyPie/view?usp=sharing">
+<input type="submit" value="Adobe Photoshop CS6" />
 </form>
 <h3> ......................................................................................................................................................................................................................................................................................................................................................................................................
 
