--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ article {
 </nav>
  
 <article>
-  <h1>Tất nhiên rồi đây là dữ liệu</h1>
+  <h1>Dữ liệu</h1>
 
 
     <h4>* Activate Windows Office</h4>
