--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ article {
   <h4>* Autocad 2007</h4>
 <form action="https://drive.google.com/file/d/182yVXx-4Fcih8ZRE7pOEaLwD2n7fyPie/view?usp=sharing">
 <input type="submit" value="Autocad 2007" />
-
+   </form>
 <h4>* Office 365</h4>
     <form action="https://drive.google.com/file/d/10Z_U9XLBYyp6gT-VmcIm2aE3Fo4f-zFV/view?usp=sharing">
 <input type="submit" value="Office 365" />
@@ -131,11 +131,12 @@ article {
  <h4>* Wub</h4>
 <form action="https://drive.google.com/file/d/1ZdFK6AKircKDXJihC963PzW4CyS66yEL/view?usp=sharing">
 <input type="submit" value="Wub" />
+     </form>
   
  <h4>* AccHelper</h4>
 <form action="https://drive.google.com/file/d/1IMIy-bL10P_3HP8jdHe8u7Kbm_twcpYb/view?usp=sharing">
 <input type="submit" value="AccHelper" />
-  
+    </form> 
  
 <h3> ......................................................................................................................................................................................................................................................................................................................................................................................................
 </form>
